--- a/home.html
+++ b/home.html
@@ -5,25 +5,29 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Que es</title>
-    <link rel="stylesheet" href="styles.css">
+    <title>Document</title>
     <script src="https://kit.fontawesome.com/a09dafbe35.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="index.css">
 </head>
 
 <body>
-    <header>
-        <div class="logo">
-            <img src="/img3/ironicon.jpg" alt="Logo pagina">
-            <h2>Marvel - Zone</h2>
+
+    <nav class="nav">
+        <div class="nav__contenedor">
+            <h1 class="nav__logo">Marvel Zone</h1>
+            <label for="menu" class="nav__label">
+                <i class="fa-solid fa-bars"></i>
+            </label>
+            <input type="checkbox" id="menu" class="nav__input">
+
+            <div class="nav__menu">
+                <a href="./home.html" class="nav__item">Marvel</a>
+                <a href="./movies.html" class="nav__item">Peliculas</a>
+                <a href="./stone.html" class="nav__item">Gemas</a>
+            </div>
         </div>
-        <nav>
-            <a href="./index.html" class="nav-link">Inicio</a>
-            <a href="./gemas.html" class="nav-link">Gemas</a>
-            <a href="./heroes.html" class="nav-link">Heroes</a>
-            <a href="./peliculas.html" class="nav-link">Peliculas</a>
-        </nav>
-    </header>
-    
+    </nav>
+
     <h2>¿Que es Marvel?</h2>
 
     <p>Marvel Comics, es un sello editorial y marca registrada de Marvel Worldwide Inc. Quien lleva a través
