--- a/movies.html
+++ b/movies.html
@@ -1,13 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <script src="https://kit.fontawesome.com/a09dafbe35.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="./assets/index.css">
+    <link rel="stylesheet" href="./assets/movies.css">
+
 </head>
+
 <body>
     <nav class="nav">
         <div class="nav__contenedor">
@@ -25,45 +29,48 @@
         </div>
     </nav>
 
+    <li>
+        <button class="switchdark active" id="switch">
+            <span><i class="fa-sharp fa-solid fa-sun"></i></span>
+            <span><i class="fa-sharp fa-solid fa-moon"></i></span>
+    </li>
+
     <h2>Peliculas</h2>
 
-    <p>Marvel cuenta con 29 peliculas y 12 series, su orden es el siguiente</p>
-    <p>1: Capitan America: El primer vengador</p>
-    <p>2: Capitana Marvel</p>
-    <p>3: Iron Man</p>
-    <p>4: Iron Man 2</p>
-    <p>5: Thor</p>
-    <p>6: Los Vengadores</p>
-    <p>7: Iron Man 3</p>
-    <p>8: Thor: El mundo oscuro</p>
-    <p>9: Capitan America: El soldado de invierno</p>
-    <p>10: Guardianes de la galaxia</p>
-    <p>11: Guardianes de la galaxia Vol. 2</p>
-    <p>12: Yo soy Groot</p>
-    <p>13: Vengadores: La era de Ultron</p>
-    <p>14: Ant-Man</p>
-    <p>15: Capitan America: Civil War</p>
-    <p>16: Spider-Man: Homecoming</p>
-    <p>17: Doctor Strange</p>
-    <p>18: Viuda negra</p>
-    <p>19: Black Panter</p>
-    <p>20: Thor: Ragnarok</p>
-    <p>21: Ant-Man y la Avispa</p>
-    <p>22: Avengers: Infinity War</p>
-    <p>23: Avengers: Endgame</p>
-    <p>24: Loki</p>
-    <p>25: Wanda-vision</p>
-    <p>26: Shang-Chi y la leyenda de los diez anillos</p>
-    <p>27: Falcon y el Soldado de Invierno</p>
-    <p>28: Spider-man: Lejos de casa</p>
-    <p>29: Spider-Man: No Way Home</p>
-    <p>30: Eternals</p>
-    <p>31: Ojo de Halcón</p>
-    <p>32: Doctor Strange en el multiverso de la locura</p>
-    <p>33: Caballero Luna</p>
-    <p>34: She-Hulk: Abogada Hulka</p>
-    <p>35: Ms. Marvel</p>
-    <p>36: Thor: Love and Thunder</p>
-    <p>37: Black Panther: Wakanda Forever</p>
+   <div  class="container">
+    <img src="./movies/capitan.jpeg" alt="">
+    <img src="./movies/capitana.jpeg" alt="">
+    <img src="./movies/ironman.jpeg" alt="">
+    <img src="./movies/ironman2.jpeg" alt="">
+    <img src="./movies/thor.jpeg" alt="">
+    <img src="./movies/vengadores1.jpeg" alt="">
+    <img src="./movies/ironman3.jpeg" alt="">
+    <img src="./movies/thor2.jpeg" alt="">
+    <img src="./movies/capitan2.jpeg" alt="">
+    <img src="./movies/guardianes1.jpeg" alt="">
+    <img src="./movies/guardianes2.jpeg" alt="">
+    <img src="./movies/vengadores2.jpeg" alt="">
+    <img src="./movies/antman.jpeg" alt="">
+    <img src="./movies/civilwar.jpeg" alt="">
+    <img src="./movies/spider1.jpeg" alt="">
+    <img src="./movies/doctor1.jpeg" alt="">
+    <img src="./movies/viuda.jpeg" alt="">
+    <img src="./movies/black.jpeg" alt="">
+    <img src="./movies/thor3.jpeg" alt="">
+    <img src="./movies/antman2.jpeg" alt="">
+    <img src="./movies/infinitywar.jpeg" alt="">
+    <img src="./movies/endgame.jpeg" alt="">
+    <img src="./movies/Shangchi.jpeg" alt="">
+    <img src="./movies/spider2.jpeg" alt="">
+    <img src="./movies/spider3.jpeg" alt="">
+    <img src="./movies/eternals.jpeg" alt="">
+    <img src="./movies/doctor2.jpeg" alt="">
+    <img src="./movies/thor4.jpeg" alt="">
+    <img src="./movies/black2.jpeg" alt="">
+   </div>
+
+
+    <script src="./assets/main.js"></script>
 </body>
+
 </html>
