--- a/stone.html
+++ b/stone.html
@@ -1,13 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <script src="https://kit.fontawesome.com/a09dafbe35.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="./assets/index.css">
+    <link rel="stylesheet" href="./assets/slider.css">
+
 </head>
+
 <body>
     <nav class="nav">
         <div class="nav__contenedor">
@@ -17,14 +21,36 @@
             </label>
             <input type="checkbox" id="menu" class="nav__input">
 
+
+
             <div class="nav__menu">
                 <a href="./home.html" class="nav__item">Marvel</a>
                 <a href="./movies.html" class="nav__item">Peliculas</a>
                 <a href="./stone.html" class="nav__item">Gemas</a>
+
             </div>
         </div>
     </nav>
 
+
+    <div class="slider">
+        <ul>
+            <li><img src="./img3/gema1.jpeg" alt=""></li>
+            <li><img src="./img3/gema2.jpeg" alt=""></li>
+            <li><img src="./img3/gema3.jpeg" alt=""></li>
+            <li><img src="./img3/gema4.jpeg" alt=""></li>
+            <li><img src="./img3/gema5.jpeg" alt=""></li>
+            <li><img src="./img3/gema6.jpeg" alt=""></li>
+        </ul>
+    </div>
+
+    <li>
+        <button class="switchdark active" id="switch">
+            <span><i class="fa-sharp fa-solid fa-sun"></i></span>
+            <span><i class="fa-sharp fa-solid fa-moon"></i></span>
+    </li>
+
+    </div>
     <h2>¿Que son las gemas?</h2>
 
     <p>Las Gemas del Infinito son seis objetos increíblemente poderosos, que tienen un aspecto similar a unas piedras y
@@ -61,6 +87,11 @@
         manipular el flujo del tiempo a voluntad, congelándolo, acelerándolo o retrocediéndolo</p>
 
     <h3>Gema del Alma</h3>
-    <p>esta piedra infinita tiene el poder de robar o controlar las almas reales.</p>
+    <p>Esta piedra infinita tiene el poder de robar o controlar las almas reales.</p>
+
+
+
+    <script src="main.js"></script>
 </body>
+
 </html>
